--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 					</div>
 				</div>
 			</article>
-			<div id="error"></div>
+			<div id="error" class="color-red"></div>
 		</div>
 	</body>
 </html>
