--- a/public/numbers.html
+++ b/public/numbers.html
@@ -39,8 +39,10 @@
 				onclick="vote(this, false)"
 			></i>
 		</div>
-		<div id="buttons">
-			<button id="submit">Try it</button>
+		<div id="try-again">
+			<div>
+				<button id="submit">Try again</button>
+			</div>
 		</div>
 		<div id="score"></div>
 		<div id="rating">
@@ -60,6 +62,9 @@
 		</div>
 	</article>
 	<div id="error" class="color-red"></div>
+	<nav>
+		Did you know that I can also <a href="index.html">make predictions</a>?
+	</nav>
 </div>
 </body>
 </html>
